<resources>
    <string name="app_name">BloodHope</string>

    <string name="slide_welcome_text1a">BloodHope</string>
    <string name="slide_welcome_text1b">BloodHope</string>
    <string name="slide_welcome_text1c">BloodHope</string>

    <string name="slide_welcome_text2a">BloodHope</string>
    <string name="slide_welcome_text2b">BloodHope</string>
    <string name="slide_welcome_text2c">BloodHope</string>

    <string name="button_welcome_next">NEXT</string>
    <string name="button_welcome_previous">PREVIOUS</string>
    <string name="button_welcome_finish">FINISH</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string-array name="blood_groups">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <!--Facebook SignIn-->
    <string name="facebook_app_id">771140329892853</string>
    <string name="fb_login_protocol_scheme">fb771140329892853</string>

    <!--Mapbox-->
    <string name="mapbox_access_token">pk.eyJ1IjoiZ3Jvd2NhbGxpc2F5YSIsImEiOiJjam9pOGlvZXcwNms5M3Bxc2F2enF4bjE2In0.23FP_ZfBL4LaldqAZdynow</string>

    <!--FCM Channer-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">BloodHope</string>


    <string name="blood_category_prices">Prices</string>
    <string name="blood_category_donate">Donate</string>
    <string name="blood_category_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>


    <string name="app_name_blood">BLOOD</string>
    <string name="app_name_hope">HOPE</string>
    <!--Menu Activity General-->
    <string name="menu_create">CREATE CAUSE</string>
    <string name="error_birth_date">Error Date</string>

    <!--Donation Activity-->
    <string name="donate_main_title">Thanks for your help!</string>
    <string name="donate_place_title">Place to go</string>
    <string name="donate_schedule_title">Schedules</string>
    <string name="donate_contacts_title">Contacts</string>



    <!--Prices Fragment-->
    <string name="prices_contact_header">Enter your address where the gift will be send.</string>
    <string name="prices_dialog_zip">Enter your ZIP</string>
    <string name="prices_dialog_address">Enter your Address</string>
    <string name="prices_dialog_terms_and_conditions">Clicking SEND, we will verify your number of donations and you are going to receive your gift in the next 30 days! Enjoy it and keep helping people!</string>
    <string name="prices_dialog_send">SEND</string>
    <string name="prices_dialog_title">Contact Info</string>
    <string name="collaborator_dialog_title">Add Collaborator</string>
    <string name="collaborator_dialog_description">This collaborator have been contacted with you by email or whatsapp, Do you confirm his/her help?</string>
    <string name="collaborator_dialog_terms_and_condition">Clicking YES, the collaborator will be part of your cause.</string>
    <string name="collaborator_dialog_yes">YES, APPROVE IT</string>
    <string name="collaborator_dialog_no">NOT YET, CANCEL</string>


    <!--Register User-->
    <string name="register_contact_info">Please fill these fields to have the necessary information below. We need to have your whatsapp number or email because this will help people who want to support you to contact you easily.</string>


    <!--Add Collaborator-->

</resources>
