<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    android:layout_margin="8dp"
    android:padding="22dp"
    android:background="@color/colorWhite"
    tools:context=".GeneralActivity">

    <com.kantutapp.bloodhope.utils.TextViewMontserratBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorBlack"
        android:text="@string/collaborator_dialog_title"
        android:textSize="22dp"/>

    <com.kantutapp.bloodhope.utils.TextViewMontserratRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/collaborator_dialog_description"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/check_green"/>

        <com.kantutapp.bloodhope.utils.TextViewMontserratRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collaborator_dialog_terms_and_condition"
            android:textSize="12dp"
            android:textStyle="italic"/>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        fancy:fb_defaultColor="@color/colorAccent"
        fancy:fb_focusColor="#ff5375"
        fancy:fb_borderWidth="1dp"
        fancy:fb_borderColor="@color/colorAccent"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/collaborator_dialog_yes"
        fancy:fb_textColor="@color/colorWhite"
        fancy:fb_textSize="14sp"
        fancy:fb_textFontRes="@font/montserratbold"/>



    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        fancy:fb_defaultColor="@color/colorWhite"
        fancy:fb_radius="30dp"
        fancy:fb_text="@string/collaborator_dialog_no"
        fancy:fb_textColor="@color/colorAccent"
        fancy:fb_textSize="14sp"
        fancy:fb_textFontRes="@font/montserratbold"/>

</LinearLayout>