<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kantutapp.bloodhope.DonateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/heart"/>

        <com.kantutapp.bloodhope.utils.TextViewMontserratBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_main_title"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:textSize="22dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <com.kantutapp.bloodhope.utils.TextViewMontserratBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:text="@string/donate_place_title"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#000"/>


            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                mapbox:mapbox_cameraTargetLat="40.73581"
                mapbox:mapbox_cameraTargetLng="-73.99155"
                mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
                mapbox:mapbox_cameraZoom="11" />

            <com.kantutapp.bloodhope.utils.TextViewMontserratBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:text="@string/donate_schedule_title"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#000"/>


            <com.kantutapp.bloodhope.utils.TextViewMontserratRegular
                android:id="@+id/hospital_schedules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="10:00 PM - 4:00 AM PT"/>

            <com.kantutapp.bloodhope.utils.TextViewMontserratBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:text="@string/donate_contacts_title"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="#000"/>


            <com.kantutapp.bloodhope.utils.TextViewMontserratRegular
                android:id="@+id/hospital_contacts_parragraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Select how do you want to contact with him/her:"/>

            <RadioGroup
                android:id="@+id/radiogroup_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/radio_whatsapp"
                    android:button="@drawable/radio_whatsapp"
                    android:layout_margin="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:scaleX="3.0"
                    android:scaleY="3.0"/>

                <RadioButton
                    android:id="@+id/radio_mail"
                    android:button="@drawable/radio_mail"
                    android:layout_margin="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:scaleX="3.0"
                    android:scaleY="3.0"/>

            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/check_green"/>

                <com.kantutapp.bloodhope.utils.TextViewMontserratRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Clicking I’M IN you will be contact with the user to let him/her know that you’re a new Colaborator!"/>

            </LinearLayout>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_im_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:layout_marginBottom="25dp"
                android:paddingTop="12dp"
                fancy:fb_defaultColor="@color/colorAccent"
                fancy:fb_focusColor="#ff5375"
                fancy:fb_radius="20dp"
                fancy:fb_text="I'M IN"
                fancy:fb_textColor="#ffffff"
                fancy:fb_textFontRes="@font/montserratbold"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
